# datascience-solutions

./: .gitattributes  README.md  pyproject.toml
1_exploratory_data_analysis/: README.md
1_exploratory_data_analysis/data/train_analysis/: file_0.csv  file_2.csv  file_3.csv  file_4.csv
1_exploratory_data_analysis/taxinyc_analysis/: problem.ipynb  solution.ipynb
1_exploratory_data_analysis/train_analysis/: README.md  problem.ipynb  solution.ipynb
1_exploratory_data_analysis/train_analysis/data/: file_1.csv  file_5.csv
2_classical_machine_learning/: README.md  solution.ipynb
2_classical_machine_learning/adult_census/: solution.ipynb
2_classical_machine_learning/blood_transfusion/: solution.ipynb
3_deep_learning/: README.md
4_natural_language_processing/: README.md
docs/: contribute.md  sample.ipynb  sample_solution.ipynb
