[tool.poetry]
name = "datasciencequestions"
version = "0.1.0"
description = ""
authors = ["Andres Ladino <andres.ladino@ratp.fr>"]
readme = "README.md"
packages = [
    {include = "dsquestions", from="src"}
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
geopandas = "^1.0.0"
tensorflow = "^2.16.1"
pyspark = "^3.5.1"
mlflow = "^2.14.1"
ray = "^2.30.0"
dask = "^2024.6.2"
seaborn = "^0.13.2"
plotly = "^5.22.0"
altair = "^5.3.0"

[tool.poetry.group.dev.dependencies]
altair = "^5.3.0"
flake8 = "^7.1.0"
black = "^24.4.2"
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
