[project]
name = "datasciencequestions"
version = "0.1.0"
description = ""
authors = [{name = "Andres Ladino", email = "andres.ladino@ratp.fr"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas==2.2.2",
    "geopandas==1.0.0",
    "tensorflow==2.16.1",
    "pyspark==3.5.1",
    "mlflow==2.14.1",
    "dask==2025.1.0",
    "seaborn==0.13.2",
    "plotly==5.22.0",
    "altair==5.3.0",
    "ipykernel>=6.29.5",
    "pip>=25.0",
]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters
